sass/screen.scss
/* ... */
  
.ui-icon-lyt-search {
  background-image: url(../images/icons/search_menu_icn_18.png);
  }

.ui-icon-lyt-search-main {
  background-image: url(../images/icons/search_icn_25.png);
  }

.ui-btn-icon-notext {
  &[data-icon='lyt-search'], &[data-icon='lyt-gear'],  &[data-icon='book-index'], &[data-icon='bookmark-add'], &[data-icon='book-settings'], &[data-icon='share'] {
    .ui-btn-inner {
      padding: 5px 0 0 21px;
    }
  }
  
  &[data-icon='lyt-search'] {
    @include background-image(linear-gradient(#8cbbe2, #4c95d1));
  } 
}

.ui-icon-list-delete {
  background-image: url(../images/icons/delete_icn_16.png);
}

/* Media query for high resolution icons for devices width a device pixel ratio above 2. */

@media only screen and (-webkit-min-device-pixel-ratio: 2) {
	 .ui-icon-list-delete {
			background-image: url(../images/icons/delete_icn_32.png);
      background-size: 16px 16px;
  }
   .ui-icon-lyt-search {
      background-image: url(../images/icons/search_menu_icn_36.png);
      background-size: 18px 18px;
  }
   .ui-icon-lyt-gear {
    background-image: url(../images/icons/settings_menu_icn_36.png);
    background-size: 18px 18px;
  }
    .book-now-playing {
    background-image: url(../images/icons/nowplaying_36.png);
    background-size: 18px 18px;
  }
   .ui-icon-book-index {
    background-image: url(../images/icons/index_icn_36.png);
    background-size: 25px 18px;
  } 
   .ui-icon-bookmark-list {
    background-image: url(../images/icons/bookmark_list_icn_36.png);
    background-size: 25px 18px;
  } 
    .ui-icon-bookmark-add {
    background-image: url(../images/icons/add_bookmark_icn_36.png);
    background-size: 25px 18px;
  }
    .ui-icon-lyt-more {
    background-image: url(../images/icons/more_icn_36.png);
    background-size: 25px 18px;
  }
    .ui-icon-share {
    background-image: url(../images/icons/share_icn_36.png);
    background-size: 23px 18px;
  }
    .ui-icon-book-settings {
    background-image: url(../images/icons/book_settings_icn_36.png);
    background-size: 30px 18px;
  }
    .ui-icon-lyt-play {
    background-image: url(../images/icons/play_btn_36.png);
    background-size: 25px 18px;
  }
    .ui-icon-lyt-rewind {
    background-image: url(../images/icons/back_btn_36.png);
    background-size: 25px 18px;
  }
    .ui-icon-lyt-forward {
    background-image: url(../images/icons/forward_btn_36.png);
    background-size: 25px 18px;
  }
    .ui-icon-lyt-pause {
    background-image: url(../images/icons/pause_btn_36.png);
    background-size: 25px 18px;
  }
    .ui-icon-lyt-search-main {
    background-image: url(../images/icons/search_icn_50.png);
    background-size: 25px 25px;
  }
    .ui-icon.ui-icon-arrow-r {
    background-image: url(../images/icons/arrow_icn_34.png);
    background-size: 16px 16px;
  }
    .ui-icon.ui-icon-arrow-r {
    background-image: url(../images/icons/arrow_icn_34.png);
    background-size: 16px 16px;
  }
    #logged-in-as {
    background-image: transparent url(../images/icons/settings_profile_icn_64.png) no-repeat 0 50%;
    background-size: 32px 32px;
  }
    img.nota-full {
    background-image: url(../images/logo_hires.png);
    background-size: 150px 75px;
  }
    #bookshelf-content {
    /* background-image: url(../images/icons/empty_bookshelf_hires.png); */
    background-size: 240px 40px;
  }
  
    #nota-logo {
    background-image: url(../images/nota-logo-hires.png);
    background-size: 200px 67px;
  }  

    #list_item_1 {
    background-image: url(../images/icons/recommend_icn_50.png);
    background-size: 25px 25px;
  }
    #list_item_2 {
    background-image: url(../images/icons/new_icn_50.png);
    background-size: 25px 25px;
  }
    #list_item_3 {
    background-image: url(../images/icons/top10_icn_60.png);
    background-size: 25px 25px;
  }
    #list_item_4 {
    background-image: url(../images/icons/top10_icn_60.png);
    background-size: 25px 25px;
  }
    #list_item_5 {
    background-image: url(../images/icons/top10_icn_60.png);
    background-size: 25px 25px;
    }
}

$bubble-background: white;
$bubble-opacity: 0.8;
$bubble-arrow-height: 10px;

.bubble-notification {
    position: absolute;
}

.bubble-notification-message {
    opacity: $bubble-opacity;
    background: $bubble-background;
    /* Center */
    margin: 0px auto;
    top: $bubble-arrow-height;

    padding: 5px 20px;
    border-radius: 3px;
    white-space: nowrap;
    font-family: "Arial";
    font-weight: bold;
    font-size: 12px;
}

.bubble-notification-arrow {
    opacity: $bubble-opacity;
    /* Center */
    margin: 0px auto;

    /* Triangle magic begins here */
    width: 0px;
    height: 0px;
    border-style: solid;
    border-width: 0 7px $bubble-arrow-height 7px;
    border-color: transparent transparent $bubble-background transparent;
}

.bookmark-actions {
    background-color: #282828;
    color: white;
     
    .bookmark-share {
        background-image: url(../images/icons/share_icn_18_white.png);
        background-size: 22px 18px;
        background-repeat:no-repeat;
        background-position:center;
    }
    
    .bookmark-delete {
        background-image: url(../images/icons/delete_icn_18_white.png);
        background-size: 18px 18px;
        background-repeat:no-repeat;
        background-position:center;
    }
}

